Bug 469502 - InlineMessage with info about saved image only shown for first screenshot taken while Spectacle is running
Summary: InlineMessage with info about saved image only shown for first screenshot tak...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-08 17:28 UTC by Axel
Modified: 2024-02-15 16:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Here (2.53 MB, video/x-matroska)
2023-06-20 13:32 UTC, Axel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Axel 2023-05-08 17:28:45 UTC
SUMMARY
No passive notification or any other visual feedback is shown about the screenshot being saved to Pictures, additionally the window title still says Unsaved

STEPS TO REPRODUCE
1. Open Spectacle
2. Take a screenshot
3. Click Save on the toolbar

OBSERVED RESULT
The screenshot is saved but no visual feedback is given about it

EXPECTED RESULT
A Toast confirming the screenshot was saved successfully
Comment 1 Nate Graham 2023-05-16 20:22:17 UTC
A message does appear, or at least it does for me. Can you take a screen recording that shows the issue?
Comment 2 Bug Janitor Service 2023-05-31 03:45:21 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Axel 2023-06-19 22:31:42 UTC
1 Open spectacle
2 Hit save, you will get a banner and the title will change
3 Take a new screenshot using the buttons on the right
4 Hit save, nothing will happen
Comment 4 Nate Graham 2023-06-19 22:39:09 UTC
Cannot reproduce the issue with those steps. Can you attach a screen recording that shows the issue happening? Thanks!
Comment 5 Axel 2023-06-20 13:32:41 UTC
Created attachment 159788 [details]
Here
Comment 6 Nate Graham 2023-07-25 19:31:19 UTC
Can reproduce now, thanks. Steps to reproduce:

1. Configure Spectacle to not do anything after taking screenshot (don't quit, auto-save, or copy the image to the clipboard)
2. Take a Rectangular Region screenshot
3. In the viewer window, click "Save"
4. From the viewer window, take a Full Screen screenshot
5. Click Save

RESULTS
No InlineMessage is shown about the screenshot taken in step 4.
Comment 7 Bug Janitor Service 2024-02-13 23:31:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/332
Comment 8 Noah Davis 2024-02-15 16:17:18 UTC
Git commit 155f0e81ff75bea9d5691eea2db9849bc00f80e8 by Noah Davis, on behalf of Eugene Popov.
Committed on 15/02/2024 at 15:36.
Pushed by ndavis into branch 'master'.

ViewerWindow: Check if s_viewerWindowInstance points to this when destroying

M  +3    -1    src/Gui/ViewerWindow.cpp

https://invent.kde.org/graphics/spectacle/-/commit/155f0e81ff75bea9d5691eea2db9849bc00f80e8
Comment 9 Noah Davis 2024-02-15 16:17:50 UTC
Git commit d427b95b395913c63d08ca52ddbf184f263cf6ac by Noah Davis, on behalf of Eugene Popov.
Committed on 15/02/2024 at 16:17.
Pushed by ndavis into branch 'release/24.02'.

ViewerWindow: Check if s_viewerWindowInstance points to this when destroying


(cherry picked from commit 155f0e81ff75bea9d5691eea2db9849bc00f80e8)

M  +3    -1    src/Gui/ViewerWindow.cpp

https://invent.kde.org/graphics/spectacle/-/commit/d427b95b395913c63d08ca52ddbf184f263cf6ac