ViewerWindow: Check if s_viewerWindowInstance points to this when destroying

BUG: 469502


(cherry picked from commit 155f0e81ff75bea9d5691eea2db9849bc00f80e8)